update README file

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <link rel="modulepreload" href="/rollup-docs-cn/assets/chunks/theme.CeqEnVUd.js">
     <link rel="modulepreload" href="/rollup-docs-cn/assets/chunks/framework.nT7dnMoH.js">
     <link rel="modulepreload" href="/rollup-docs-cn/assets/index.md.4z9Ewov-.lean.js">
-    <link href="/favicon.png" rel="icon" type="image/png">
-    <link href="/favicon.png" rel="apple-touch-icon" sizes="128x128">
-    <link href="/manifest.json" rel="manifest">
+    <link href="/rollup-docs-cn/favicon.png" rel="icon" type="image/png">
+    <link href="/rollup-docs-cn/favicon.png" rel="apple-touch-icon" sizes="128x128">
+    <link href="/rollup-docs-cn/manifest.json" rel="manifest">
     <meta content="#333333" name="theme-color">
     <meta content="yes" name="mobile-web-app-capable">
     <meta content="default" name="apple-mobile-web-app-status-bar-style">
